# zaps

./: docker-compose.yml
.github/workflows/: ci-backend.yml
backend/: Cargo.toml
backend/migrations/: 20260530000001_enhance_notifications.sql  20260602000000_create_payment_schedules.sql  20260627000000_yield_auto_earn_and_notifications.sql
backend/src/: app.rs  main.rs  models.rs
backend/src/api/: bridge.rs  mod.rs  social.rs  user.rs  yield.rs
backend/src/db/: models.rs  schema.sql  yield.rs
backend/src/http/: notifications.rs  payments.rs
backend/src/service/: mod.rs  notification_service.rs  schedule_service.rs  soroban_service.rs
backend/src/services/: allbridge.rs  mod.rs  notifications.rs  sweep_worker.rs  yield_calc.rs
backend/tests/: soroban_signer_test.rs
contracts/: Cargo.toml
contracts/contracts/naira_token/src/: lib.rs
contracts/contracts/social_graph/src/: lib.rs
contracts/fee-distribution/: Cargo.toml
contracts/fee-distribution/src/: lib.rs  test.rs
contracts/merchant-vault/src/: lib.rs  test.rs
contracts/payment-batch/: Cargo.toml
contracts/payment-batch/src/: lib.rs  test.rs
dashboard/: package-lock.json  package.json
dashboard/components/: Sidebar.tsx
mobileapp/: metro.config.cjs  package-lock.json  package.json
mobileapp/app/: _layout.tsx  receive.tsx  scan.tsx  transfer.tsx
mobileapp/app/(personal)/: history.tsx  home.tsx
mobileapp/app/merchant/: qr-code.tsx
mobileapp/src/components/: AccountTypeCard.tsx  Button.tsx  Input.tsx  ThemedText.tsx
mobileapp/src/hooks/: useCameraPermission.ts
mobileapp/src/services/: transactionService.ts
mobileapp/src/utils/: performance.ts  sep0007.ts
server/: package.json
server/prisma/: schema.prisma
server/src/controllers/: merchant.controller.ts
server/src/processors/: index.ts  onboarding.processor.ts
server/src/routes/: merchant.routes.ts
server/src/services/: onboarding.service.ts  queue.service.ts
server/src/types/: job-payloads.ts
src/components/: BiometricGuard.tsx  BiometricSettings.tsx  PaymentConfirm.tsx
src/hooks/: useBiometric.ts
src/services/: biometricAuth.ts
(+25 files in other folders)
